Bug fix: byl nastaven overflow y auto na boxer

--- a/components/Boxer/_boxer.scss
+++ b/components/Boxer/_boxer.scss
@@ -1,5 +1,6 @@
 .boxer{
     padding: 2rem;
+    overflow-y: auto;
     width: 95%;
     position: relative;
     max-width: 900px;
@@ -62,11 +63,5 @@
         display: flex;
         justify-content: center;
         margin-top: 1rem;
-    }
-}
-
-@media screen and (max-height: 800px){
-    .boxer{
-        overflow-y: scroll;
     }
 }
